--- a/ansible/trainer.yml
+++ b/ansible/trainer.yml
@@ -2,7 +2,10 @@
 - name: DeepFreq deploy
   hosts: tag_group_deepfreq1
   remote_user: ec2-user
+  become: true
   gather_facts: true
 
   roles:
+      - goozbach.EPEL
+      - CSC-IT-Center-for-Science.cuda
       - trainer
